--- a/Exercice_4/index.html
+++ b/Exercice_4/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <title>Exercice 4</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <form>
-    <label for="password">Votre mot de passe : </label><input type="text" name="password" id="password" />
-    <label for="confirmPassword">Confirmez : </label><input type="text" name="confirmPassword" id="confirmPassword" />
-    <button type="button" name="button" >Vérification</button>
+    <label  for="password">Votre mot de passe : </label><input type="text" name="password" id="password" />
+    <label  for="confirmPassword">Confirmez : </label><input type="text" name="confirmPassword" id="confirmPassword" />
+    <button type="button" name="button" id = "verif" >Vérification</button>
   </form>
+  <script src="main.js"></script>
 </body>
 </html>
